--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es6"
   },
   "include": [
-    "**/*.ts"
+    "src/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
 }
