--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "webpack": "^5.76.0",
-    "webpack-cli": "^5.0.2"
+    "webpack-cli": "^5.0.2",
+    "zip-webpack-plugin": "^4.0.1"
   }
 }
