--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "siyuan": "latest",
     "tslib": "2.4.0",
     "typescript": "4.7.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.2",
     "zip-webpack-plugin": "^4.0.1"
