--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@vue/compiler-sfc": "^3.3.4",
     "eslint": "^8.40.0",
+    "shortcuts": "^2.0.3",
     "vue": "^3.3.4",
     "vue-loader": "^17.0.1",
     "webpack-sources": "^3.2.3"
