--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mini-css-extract-plugin": "2.3.0",
     "sass": "^1.62.1",
     "sass-loader": "^12.6.0",
-    "siyuan": "latest",
+    "siyuan": "^0.7.2",
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
