--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.1
         with:
           type: 'zip'
-          directory: './dist'
+          directory: './dev/dist'
           filename: 'package.zip'
           exclusions: '*.git* /*node_modules/* .editorconfig'
 
