--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vanessa",
   "license": "MIT",
   "devDependencies": {
+    "@types/fabric": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -21,7 +22,7 @@
     "mini-css-extract-plugin": "2.3.0",
     "sass": "^1.62.1",
     "sass-loader": "^12.6.0",
-    "siyuan": "^0.7.2",
+    "siyuan": "^0.7.9",
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@vue/compiler-sfc": "^3.3.4",
     "eslint": "^8.40.0",
+    "fabric": "^5.3.0",
     "shortcuts": "^2.0.3",
     "vue": "^3.3.4",
     "vue-loader": "^17.0.1",
